--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_deps = fmalpartida/LiquidCrystal@^1.5.0
+lib_deps = 
+	arduino-libraries/LiquidCrystal@^1.0.7
